kubernetes/main/applications/clab/clabernetes/app/manifest.yaml
---
# Source: clabernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clabernetes-http
  namespace: clab
  labels:
    chart: "clabernetes-0.3.1"
    release: clabernetes
    heritage: Helm
    revision: "1"
    clabernetes/app: clabernetes
    clabernetes/name: "clabernetes-manager"
    clabernetes/component: manager-http
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 10443
  selector:
    clabernetes/app: clabernetes
    clabernetes/name: "clabernetes-manager"
    clabernetes/component: manager
---
# Source: clabernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clabernetes-ui
  namespace: clab
  labels:
    chart: "clabernetes-0.3.1"
    release: clabernetes
    heritage: Helm
    revision: "1"
    app.kubernetes.io/name: "clabernetes-ui"
    clabernetes/app: clabernetes
    clabernetes/name: "clabernetes-ui"
    clabernetes/component: ui
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
  selector:
    clabernetes/app: clabernetes
    clabernetes/name: "clabernetes-ui"
    clabernetes/component: ui
---
# Source: clabernetes/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clabernetes-manager
  namespace: clab
  labels:
    chart: "clabernetes-0.3.1"
    release: clabernetes
    heritage: Helm
    revision: "1"
    app.kubernetes.io/name: "clabernetes-manager"
    clabernetes/app: clabernetes
    clabernetes/name: "clabernetes-manager"
    clabernetes/component: manager
spec:
  selector:
    matchLabels:
      clabernetes/app: clabernetes
      release: clabernetes
      clabernetes/component: manager
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        chart: "clabernetes-0.3.1"
        release: clabernetes
        heritage: Helm
        revision: "1"
        app.kubernetes.io/name: "clabernetes-manager"
        clabernetes/app: clabernetes
        clabernetes/name: "clabernetes-manager"
        clabernetes/component: manager
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    clabernetes/app: clabernetes
                    clabernetes/name: "clabernetes-manager"
                    clabernetes/component: manager
                topologyKey: kubernetes.io/hostname
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    clabernetes/app: clabernetes
                    clabernetes/name: "clabernetes-manager"
                    clabernetes/component: manager
                topologyKey: topology.kubernetes.io/zone
      terminationGracePeriodSeconds: 10
      serviceAccountName: "clabernetes-service-account"
      containers:
        - name: manager
          image: "ghcr.io/srl-labs/clabernetes/clabernetes-manager:0.3.1"
          imagePullPolicy: IfNotPresent
          command: ["/clabernetes/manager", "run"]
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
          ports:
          - name: http
            containerPort: 10443
          livenessProbe:
            httpGet:
              path: /alive
              port: 10443
              scheme: HTTPS
            successThreshold: 1
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
---
# Source: clabernetes/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clabernetes-ui
  namespace: clab
  labels:
    chart: "clabernetes-0.3.1"
    release: clabernetes
    heritage: Helm
    revision: "1"
    app.kubernetes.io/name: "clabernetes-ui"
    clabernetes/app: clabernetes
    clabernetes/name: "clabernetes-ui"
    clabernetes/component: ui
spec:
  selector:
    matchLabels:
      clabernetes/app: clabernetes
      release: clabernetes
      clabernetes/component: ui
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        chart: "clabernetes-0.3.1"
        release: clabernetes
        heritage: Helm
        revision: "1"
        app.kubernetes.io/name: "clabernetes-ui"
        clabernetes/app: clabernetes
        clabernetes/name: "clabernetes-ui"
        clabernetes/component: ui
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    clabernetes/app: clabernetes
                    clabernetes/name: "clabernetes-ui"
                    clabernetes/component: ui
                topologyKey: kubernetes.io/hostname
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    clabernetes/app: clabernetes
                    clabernetes/name: "clabernetes-ui"
                    clabernetes/component: ui
                topologyKey: topology.kubernetes.io/zone
      terminationGracePeriodSeconds: 10
      serviceAccountName: "clabernetes-service-account"
      containers:
        - name: ui
          image: "ghcr.io/srl-labs/clabernetes/clabernetes-ui:0.3.1"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /alive
              port: http
              scheme: HTTP
            successThreshold: 1
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
---
# Source: clabernetes/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clabernetes-ui
  namespace: clab
  labels:
    chart: "clabernetes-0.3.1"
    release: clabernetes
    heritage: Helm
    revision: "1"
    app.kubernetes.io/name: "clabernetes-ui"
    clabernetes/app: clabernetes
    clabernetes/name: "clabernetes-ui"
    clabernetes/component: ui
spec:
  ingressClassName: nginx
  rules:
    - host: ui.clabernetes.containerlab.dev
      http:
        paths:
          - backend:
              service:
                name: clabernetes-ui
                port:
                  number: 443
            path: /
            pathType: ImplementationSpecific
